--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,9 @@ body {
   content: "";
   background-image: url(../img/sprites.png), linear-gradient(#0c3256, #114165, #206988);
   background-position: -114px -65px;
+  border-radius: 11px;
   width: 22px;
   height: 22px;
-  border-radius: 11px;
   position: absolute;
   left: 7px;
   top: 4px;
@@ -75,8 +75,8 @@ body {
   width: 495px;
   height: 27px;
   display: flex;
-  margin-left: 15px;
   position: relative;
+  margin-left: 15px;
 }
 
 .user-block::before {
@@ -108,23 +108,23 @@ body {
 }
 
 .user-block [type="submit"] {
+  color: #ffffff;
   background: none;
   border: none;
   width: 37px;
-  color: #ffffff;
   padding-left: 2px;
 }
 
 .user-block a {
-  text-decoration: none;
-  color: #ffffff;
   font-size: 11px;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .user-block a:last-child {
+  font-size: 12px;
   color: #bfbfbf;
   text-decoration: underline;
-  font-size: 12px;
   padding-left: 18px;
 }
 
@@ -139,8 +139,8 @@ body {
 }
 
 .mini-navigation a {
-  vertical-align: top;
   display: inline-block;
+  vertical-align: top;
   margin-left: 8px;
 }
 
@@ -187,7 +187,7 @@ body {
   border: 1px solid #0d1642;
   border-radius: 4px;
   box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.75);
-  margin-top: 6px;
+  margin-top: 5px;
   display: flex;
   justify-content: space-between;
 }
@@ -198,10 +198,10 @@ body {
 }
 
 .main-navigation li {
-  display: inline-block;
-  vertical-align: middle;
   font-size: 14px;
   line-height: 25px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .main-navigation a {
@@ -216,7 +216,7 @@ body {
   color: #ffffff;
   background-image: linear-gradient(#206988, #114165, #0c3256);
   border-radius: 20px;
-  height: 25px;
+  height: 24px;
   padding: 0 16px;
 }
 
@@ -228,8 +228,7 @@ body {
   height: 17px;
   background: url("../img/sprites.png") no-repeat;
   background-position: -114px -16px;
-  padding: 0;
-  padding-right: 1px;
+  padding: 0 1px 0 0;
 }
 
 .basket p {
@@ -279,8 +278,7 @@ body {
   height: 133px;
 }
 
-.select b,
-.select h3 {
+.select b {
   font-family: Arial;
   line-height: 20px;
   font-weight: 900;
@@ -294,13 +292,13 @@ body {
 }
 
 .select .report {
-  border: none;
-  background: none;
   font-family: Arial;
   font-size: 14px;
   line-height: 14px;
   font-style: italic;
   text-decoration: underline;
+  border: none;
+  background: none;
 }
 
 .select label {
@@ -311,16 +309,17 @@ body {
   width: 415px;
 }
 
-.all h3 {
-  width: 155px;
-  margin: 0 auto;
-}
-
 .all b {
   font-size: 10px;
   line-height: 12px;
-  display: block;
   float: left;
+}
+
+.all .search-title {
+  font-size: 12px;
+  text-align: center;
+  width: 415px;
+  margin-bottom: 3px;
 }
 
 .all .disks {
@@ -357,10 +356,11 @@ body {
 
 .all .report {
   float: right;
+  margin-top: 5px;
 }
 
 .all li:first-child {
-  margin-bottom: 4px;
+  margin-bottom: 3px;
 }
 
 .all span {
@@ -407,7 +407,7 @@ body {
 
 [type="radio"] {
   vertical-align: middle;
-  margin: 0 0 2px 5px;
+  margin: 2px 0 0 6px;
 }
 
 .dial {
@@ -509,7 +509,7 @@ body {
   border-radius: 10px;
   position: absolute;
   left: 4px;
-  top: 4px;
+  top: 3px;
 }
 
 .subtitle::before {
@@ -547,9 +547,9 @@ body {
 }
 
 .catalog a:hover {
-  color: #0c3256;
   font-family: Arial;
   font-size: 14px;
+  color: #0c3256;
   font-weight: 700;
   font-style: italic;
   text-decoration: underline;
@@ -566,7 +566,7 @@ body {
 
 .brands .subtitle {
   width: 104px;
-  margin: 0 0 10px 16px;
+  margin: 2px 0 11px 14px;
 }
 
 .brands label {
@@ -680,10 +680,10 @@ footer {
 }
 
 .footer-navigation li {
-  display: inline-block;
-  vertical-align: top;
   font-size: 12px;
   line-height: 16px;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .footer-navigation a {
