--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,8 @@ body {
 
 /*MAIN*/
 .search {
-  min-height: 133px;  margin-top: 10px;
+  min-height: 133px;
+  margin-top: 10px;
   margin-bottom: 16px;
 }
 
@@ -390,8 +391,8 @@ body {
 
 .all .tire {
   float: left;
-
-  width: 178px;  margin-left: 25px;
+  width: 178px;
+  margin-left: 25px;
 }
 
 .all select {
@@ -450,8 +451,7 @@ body {
   margin-bottom: 5px;  margin-left: 14px;}
 
 .bus li:nth-child(2) {
-  margin-bottom: 5px;  margin-left: 45px;
-}
+  margin-bottom: 5px;  margin-left: 45px;}
 
 .bus li:nth-child(3) {
   margin-left: 15px;
@@ -618,8 +618,8 @@ body {
 
 .catalog .subtitle {
   display: block;
-
-  width: 124px;  margin: 0;
+  width: 124px;
+  margin: 0;
 
   font-size: 14px;
 }
@@ -746,15 +746,12 @@ body {
   position: relative;
 
   display: block;
-
   width: 136px;
   height: 127px;
   margin-bottom: 5px;
 
   border: 1px solid #a4aeb1;
-  border-radius: 7px;
-  background-color: #ffffff;
-}
+  border-radius: 7px;  background-color: #ffffff;}
 
 .goods img {
   position: absolute;
