--- a/css/style.css
+++ b/css/style.css
@@ -391,6 +391,7 @@ body {
 
 .all .tire {
   float: left;
+
   width: 178px;
   margin-left: 25px;
 }
@@ -618,6 +619,7 @@ body {
 
 .catalog .subtitle {
   display: block;
+
   width: 124px;
   margin: 0;
 
@@ -746,14 +748,13 @@ body {
   position: relative;
 
   display: block;
+
   width: 136px;
   height: 127px;
   margin-bottom: 5px;
 
   border: 1px solid #a4aeb1;
-  border-radius: 7px;  background-color: #ffffff;}
-
-.goods img {
+  border-radius: 7px;  background-color: #ffffff;}.goods img {
   position: absolute;
   top: 0;
   right: 0;
